Fixed size of text on mobile.

--- a/css/band-styles.css
+++ b/css/band-styles.css
@@ -607,6 +607,10 @@
   .band-member:nth-child(5) {
     grid-column: 1;
   }
+
+  .member-role.quote {
+    font-size: 2.0em;
+  }
   
   .band-member {
     padding: 15px;
@@ -679,7 +683,7 @@
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 480px) {
   .header {
     padding: 30px 0;
   }
@@ -730,6 +734,10 @@
   
   .band-member {
     padding: 20px 15px;
+  }
+
+  .member-role.quote {
+    font-size: 1.5em;
   }
   
   .member-photo img {
